--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@masshuu/scroll-utilities": "^1.1.0",
     "@react-spring/web": "^9.7.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "i18next": "^22.4.13",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
