--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Get API key from: https://newsapi.org/docs/endpoints/top-headlines
 VITE_API_KEY=
 # If set to false app will use default JSON data
 VITE_USE_API=false
