--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "tests": "jest"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.1",
