--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.59.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
